syntax = "proto2";

package com.kingsoft.protobuf;

option optimize_for = SPEED;
option java_package = "com.kingsoft.netty.sixthexample";
option java_outer_classname = "MyDataInfo";

message MyMessage{
    enum DataType{
        PersonType = 1;
        DogType = 2;
        HouseType = 3;
    }

    required DataType data_type = 1;

    oneof dataBody{
        Person person = 2;
        Dog dog = 3;
        House house = 4;
    }

}
message Person{
    optional string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}


message Dog{
    optional string name = 1;
    optional string action = 2;
}

message House{
    optional string name = 1;
    optional string city = 2;
}
